[project]
name = "quattro-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "streamlit>=1.57.0",
    "streamlit-javascript>=0.1.5",
    "supabase>=2.30.0",
    "tracker_hub",
]

[tool.uv.sources]
tracker_hub = { git = "https://github.com/gohard-lab/tracker-hub.git" }
